어려운 환경

--- a/javascript/day10/4_이벤트.html
+++ b/javascript/day10/4_이벤트.html
@@ -29,7 +29,7 @@ div{
   <script>
   
   //요즘 트렌드
-  let myDiv2 = document.querySelector('#div2')
+  let myDiv2 = document.querySelector('#div2') //태그 객체
     myDiv2.onclick = () => console.log('클릭됨')
     let myDiv = document.getElementById('div1');
 
