--- a/javascript/day03/2_입력.html
+++ b/javascript/day03/2_입력.html
@@ -10,10 +10,10 @@
   <h2>연산자 실습</h2>
   <script>
     //사용자에게 나이를 입력받아서, 10년 20년 후 나이 출력하기
-    // let age = Number(prompt('나이를 입력해주세요'));
-    // // age = Number(age);
-    // document.write('<p>당신의 10년후 나이: '+(age + 10)+'살</p>');
-    // document.write('<p>당신의 20년후 나이: '+(age + 20)+'살</p>');
+    let age =Number(prompt('나이를 입력해주세요'))
+    // age = Number(age);
+    document.write('<p>당신의 10년후 나이: '+(age + 10)+'살</p>');
+    document.write('<p>당신의 20년후 나이: '+(age + 20)+'살</p>');
 
     //사용자에게 정수하나를 입력받아서 해당 정수를 4로 나눴을 때 몫과 나머지 출력하기
     //25 -> 4로 나눴을 때 몫: 6
